<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team1count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="427dp"
        android:text="@string/team1count_string"
        android:textAlignment="center"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/team2count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="427dp"
        android:text="@string/team2count_string"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/three_point_team1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:text="@string/three_point_team1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/two_point_team1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1count" />

    <TextView
        android:id="@+id/two_point_team1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="51dp"
        android:text="@string/two_point_team1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/foul_shot_team1"
        app:layout_constraintStart_toEndOf="@+id/three_point_team1"
        app:layout_constraintTop_toBottomOf="@+id/team1count" />

    <TextView
        android:id="@+id/foul_shot_team1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="12dp"
        android:text="@string/foul_shot_team1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/two_point_team1"
        app:layout_constraintTop_toBottomOf="@+id/team1count" />

    <TextView
        android:id="@+id/three_point_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:text="@string/three_point_team2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/two_point_team2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/team2count" />

    <TextView
        android:id="@+id/two_point_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/two_point_team2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/foul_shot_team2"
        app:layout_constraintStart_toEndOf="@+id/three_point_team2"
        app:layout_constraintTop_toBottomOf="@+id/team2count" />

    <TextView
        android:id="@+id/foul_shot_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="13dp"
        android:text="@string/foul_shot_team2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/two_point_team2"
        app:layout_constraintTop_toBottomOf="@+id/team2count" />

    <Button
        android:id="@+id/btn_1p_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick='btn_1p_team1_onClick'
        android:text="@string/btn_1p_team1_string"
        app:layout_constraintBottom_toTopOf="@+id/btn_2p_team1"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_point_team1" />

    <Button
        android:id="@+id/btn_2p_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick='btn_2p_team1_onClick'
        android:text="@string/btn_2p_team1_string"
        app:layout_constraintBottom_toTopOf="@+id/btn_3p_team1"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1p_team1" />

    <Button
        android:id="@+id/btn_3p_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick='btn_3p_team1_onClick'
        android:text="@string/btn_3p_team1_string"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_2p_team1" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="8dp"
        android:onClick='btn_clear_onClick'
        android:text="@string/btn_clear_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_1p_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick='btn_1p_team2_onClick'
        android:text="@string/btn_1p_team2_string"
        app:layout_constraintBottom_toTopOf="@+id/btn_2p_team2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/three_point_team2" />

    <Button
        android:id="@+id/btn_2p_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick='btn_2p_team2_onClick'
        android:text="@string/btn_2p_team2_string"
        app:layout_constraintBottom_toTopOf="@+id/btn_3p_team2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/btn_1p_team2" />

    <Button
        android:id="@+id/btn_3p_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="btn_3p_team2_onClick"
        android:text="@string/btn_3p_team2_string"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/btn_2p_team2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="8dp"
        android:text="@string/team1_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/team1count"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="8dp"
        android:text="@string/team2_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/team2count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>